--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,14 @@
   background-color: #fff;
   height: 100px;
   border: 1px solid #9bacbd59;
+  text-align: right;
+}
+
+.display-content {
+  font-size: 50px;
+  vertical-align: middle;
+  line-height: 94px;
+  margin: 12px;
 }
 
 .input-section {
@@ -56,7 +64,6 @@
 }
 
 button {
-  background-color: aqua;
   width: 25%;
   min-height: 90px;
   padding: 24px;
