--- a/src/App.css
+++ b/src/App.css
@@ -9,13 +9,13 @@
 
 .App-header {
   background-color: #222;
-  height: 50px;
-  padding: 20px;
+  padding: 12px;
+  margin-bottom: 12px;
   color: white;
 }
 
 .App-title {
-  font-size: 1.5em;
+  font-size: 2.5em;
 }
 
 .App-intro {
