--- a/src/App.css
+++ b/src/App.css
@@ -71,6 +71,7 @@ button {
   font-size: 36px;
   border: 1px solid #9bacbd59;
   font-family: lato, sans-serif;
+  touch-action: manipulation;
 }
 
 button:focus {
