--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 .App-header {
-  background-color: #222;
+  background-color: #363c40;
   padding: 12px;
   margin-bottom: 12px;
   color: white;
